<resources>
    <string name="app_name">Балтик кабель</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Строки для бокового меню-->
    <string name="nav_clients">Клиенты</string>
    <string name="nav_map">Карта</string>
    <string name="nav_scores">Счета</string>
    <string name="nav_events">События</string>
    <string name="nav_price">Прайс</string>
    <string name="nav_call">Звонки</string>
    <string name="nav_mails">Письма</string>
    <string name="nav_swap">Обмен</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_exit">Выход</string>

    <!-- Строки для activity_login-->
    <string name="login_btn_ok">Войти</string>
    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="empty_field">Поля логин и пароль не должны быть пустыми!!!</string>

    <!-- Строки для меню -->
    <string name="action_add">Добавить</string>

    <!-- Строки для карточки клиента-->
    <string name="client_jur_face">Юр. лицо</string>
    <string name="client_fiz_face">Физ. лицо</string>
    <string name="client_name">Наименование</string>
    <string name="client_relation">Тип отношений</string>
    <string name="client_contact_face">Контактные лица</string>
    <string name="client_add_contact_face">Добавить контактное лицо</string>
    <string name="client_contact_info">Контактная информация</string>
    <string name="client_object">Объекты</string>
    <string name="client_phone">Телефон</string>
    <string name="client_mail">Почта</string>
    <string name="client_site">Сайт компании</string>
    <string name="client_jur_address">Юр. адрес</string>

    <!--Строки для добавления нового клиента-->
    <string name="add_client_name">Наименование*</string>
    <string name="add_client_type_organization">Тип организации:</string>
    <string name="add_client_type_relation">Тип отношений:</string>
    <string name="add_client_code">Введите код</string>
    <string name="add_client_inn">Введите инн</string>
    <string name="add_client_code_pookpo">Введите код ПоОКПО</string>
    <string name="add_client_jur_address">Введите юр. адрес</string>
    <string name="add_client_email">Введите email</string>
    <string name="add_client_site">Введите сайт</string>
    <string-array name="array_type_organization">
        <item>Физ. лицо</item>
        <item>Юр. лицо</item>
    </string-array>
    <string-array name="array_type_relation">
        <item>Покупатель</item>
        <item>Поставщик</item>
    </string-array>

    <!--Строки для диалогов-->
    <string name="user_logout_title">Логаут</string>
    <string name="user_logout_are_you_sure">Вы действительно хотите выйти из данного профиля?</string>
    <string name="ok">OK</string>
    <string name="no">Нет</string>
    <string name="user_empty_error">Ошибка</string>
    <string name="error_empty_name_contragent">Наименование не должно быть пустым!!!</string>
    <string name="dialog_save_message">Хотите сохранить данные контрагента?</string>
    <string name="dialog_save_title">Сохранить</string>
    <string name="dialog_error_title">Ошибка</string>

    <!--Строки для диалога добавления контактного лица-->
    <string name="add_contacts_title">Добавить контактное лицо</string>
    <string name="add_contact_name">Фамилия, имя и отчество</string>
    <string name="add_contact_role">Роль контактного лица</string>
    <string name="add_contact_comments">Комментарий</string>
    <string name="add_contact_info">Контактная информация</string>
    <string name="add_contact_work_phone">Рабочий телефон</string>
    <string name="add_contact_mobile_phone">Моб. телефон</string>
    <string name="add_contact_email">Рабочий email</string>

    <!--Строки для событий-->
    <string name="events_now">Сегодня</string>
    <string name="events_all">Все</string>
    <string name="events_more">Ещё</string>
    <string-array name="events_week">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>

    <!--Строки для добавления нового события-->
    <string name="add_event_title">Добавить новое событие</string>
    <string name="add_event_time_begin">Время начала</string>
    <string name="add_event_time_end">Время конца</string>
    <string name="add_event_message">Напишите описание</string>
    <string name="add_event_time">Время</string>
    <string name="add_event_date">Дата</string>
    <string name="add_event_touch">Нажмите чтобы ввести</string>
    <string name="add_event_error_time">Время начала события должно быть меньше времени окончания события!!!</string>
    <string name="add_event_error_message">Описание события не должно быть пустым!!!</string>

    <string name="title_activity_maps">Карта</string>

    <!--Строки для счета-->
    <string name="score_client">Клиент</string>
    <string name="score_contact">Контактное лицо</string>
    <string name="score_contract">Договор</string>
    <string name="score_responsible">Ответственный</string>
    <string name="score_initial_conditions">Исходные условия</string>
    <string name="score_order_works">Порядок выполнения работ</string>
    <string name="score_notation">Примечание</string>
    <string-array name="score_filter_array">
        <item>Все</item>
        <item>На согласовании</item>
        <item>Действует</item>
    </string-array>
    <string-array name="score_priority">
        <item>Низкий</item>
        <item>Средний</item>
        <item>Высокий</item>
    </string-array>
    <string-array name="score_status">
        <item>Отменить</item>
        <item>На согласовании</item>
        <item>Действует</item>
    </string-array>


    <!--Строки для добавления нового счета-->
    <string name="add_score_event">Добавить новый счет</string>
    <string name="add_score_client">Добавить клиента</string>
    <string name="add_score_product">Добавить товар</string>

    <string name="add_object_name">Добавить название объекта</string>
    <string name="object_name">Название</string>
    <string name="object_contact">Контактное лицо</string>
    <string name="object_comments">Комментарии</string>
    <string name="object_adress">Адрес</string>
    <string name="object_work_phone">Рабочий телефон</string>
    <string name="object_photo">Добавить фотографию</string>

</resources>
